# grid_congestion

./: .env.example  .gitignore  README.md  _quarto.yml  data.qmd  findings.qmd  index.qmd  maps.qmd  methodology.qmd  pyproject.toml  requirements.txt  run_pipeline.py  styles.css
.github/workflows/: publish.yml
config/: markets.yml  settings.py
docs/: data.html  findings.html  index.html  maps.html  methodology.html  search.json
docs/config/: markets.yml
docs/data/exports/: ercot_animation_layer.csv  ercot_map_layer.csv  harmonized_features.csv  pjm_map_layer.csv  (+8 more)
docs/maps/: ercot_congestion_map.html  pjm_congestion_map.html  spread_animation.html
docs/notebooks/: 01_schema_checks.html  02_pjm_exploration.html  03_ercot_exploration.html  04_report_charts.html
docs/reports/: bnef_style_report_template.html  final_report.html  final_report.md
docs/slides/: outline.html
examples/: sample_nodal_prices.csv
notebooks/: 01_schema_checks.ipynb  02_pjm_exploration.ipynb  03_ercot_exploration.ipynb  04_report_charts.ipynb
outputs/sample_run/: market_summary.csv  node_summary.csv  report.md  stress_events.csv
reports/: bnef_style_report_template.md
slides/: outline.md
src/: __init__.py  charts.py  clean_ercot.py  clean_pjm.py  congestion_metrics.py  download_ercot.py  download_pjm.py  export_excel_pack.py  feature_engineering.py  harmonize.py  io_utils.py  logging_utils.py  mapbox_viz.py  spatial.py
src/grid_congestion/: __init__.py  analysis.py  cli.py  io.py  schema.py
tests/: test_congestion_metrics.py  test_feature_engineering.py  test_harmonize.py
(+2 files in other folders)
